--- a/SETTINGS_CHBMIT.json
+++ b/SETTINGS_CHBMIT.json
@@ -1,6 +1,6 @@
 {
   "dataset": "CHBMIT",
-  "datadir": "/mnt/data4/server/datasets/seizure/CHB-MIT",
-  "cachedir": "/mnt/data5_2T/tempdata/CHBMIT_SZPred",
-  "resultdir": "results"
+  "datadir": "../CHBMIT_data",
+  "cachedir": ".cache/CHBMIT",
+  "resultdir": ".results_chb"
 }
